exports[`invalid(1): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(1): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'foo'
      message: 'Use bar instead.'

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(2): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Use bar instead.

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'foo'

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(3): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(4): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - name: 'foo'
      message: ''

Code:
  1 | {"dependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(4): {\"dependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'
    - 'baz'

Code:
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(6): {\"devDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"devDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(6): {\"devDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"foo": "^1.0.0"}}
    |                      ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(7): {\"peerDependencies\": {\"foo\": \"*\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"peerDependencies": {"foo": "*"}}

`;

exports[`invalid(7): {\"peerDependencies\": {\"foo\": \"*\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "*"}}
    |                       ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(8): {\"optionalDependencies\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'

Code:
  1 | {"optionalDependencies": {"foo": "^1.0.0"}}

`;

exports[`invalid(8): {\"optionalDependencies\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"optionalDependencies": {"foo": "^1.0.0"}}
    |                           ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 1`] = `

[Input]
Options:
- packages:
    - 'foo'
    - name: 'bar'
      message: 'Deprecated.'

Code:
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                   ^^^^^ Do not use \`foo\`.

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}} 3`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}}
    |                                    ^^^^^ Deprecated.

`;
